// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`direct nested instance property getter 1`] = `
Object {
  "args": Array [
    "profile.display_name (direct)",
    "new_displayName",
  ],
}
`;

exports[`direct nested model method applyByPath 1`] = `
Object {
  "args": Array [
    "getClass",
    [Function],
  ],
}
`;

exports[`direct nested model method call 1`] = `
Object {
  "args": Array [
    "getClass",
    [Function],
  ],
}
`;

exports[`direct nested model property setByPath 1`] = `
Object {
  "args": Array [
    "profile.display_name: (before)",
    "new_displayName",
  ],
}
`;

exports[`direct nested model property setByPath 2`] = `
Object {
  "args": Array [
    "profile.display_name: (change)",
    "newVal_newName",
    "newVal_newName",
  ],
}
`;

exports[`direct nested model property setByPath 3`] = `
Object {
  "args": Array [
    "profile.display_name: (after)",
    "new_displayName",
  ],
}
`;

exports[`direct nested model property setter 1`] = `
Object {
  "args": Array [
    "profile.display_name: (before)",
    "new_displayName",
  ],
}
`;

exports[`direct nested model property setter 2`] = `
Object {
  "args": Array [
    "profile.display_name: (change)",
    "newVal_newName",
    "newVal_newName",
  ],
}
`;

exports[`direct nested model property setter 3`] = `
Object {
  "args": Array [
    "profile.display_name: (after)",
    "new_displayName",
  ],
}
`;

exports[`indirect nested model property getter 1`] = `
Object {
  "args": Array [
    "profile.display_name (indirect)",
    undefined,
  ],
}
`;

exports[`nested collection getter 1`] = `
Object {
  "args": Array [
    "transactions",
    Array [
      Object {
        "id": "9fd256a1-ecfb-4458-a47d-77dd2ce6e01d",
      },
      Object {
        "id": "455e5e72-e0d5-4fa6-83a1-468c2d9322e3",
      },
      Object {
        "id": "a0231195-4b75-4359-9006-74ba6e289ee9",
      },
      Object {
        "id": "60fa64b4-c652-4fb6-b33a-63df1d20a21b",
      },
      Object {
        "id": "06f1a27e-7f5a-4d16-9ab7-c79ab3a3e99f",
      },
      Object {
        "id": "23a6ce73-eb10-4ece-a875-c3f3d0bc042e",
      },
      Object {
        "id": "56e52355-c117-471b-919a-d09dc7ca6aee",
      },
      Object {
        "id": "a682e5e0-c852-4b91-a5a4-9e368a446dac",
      },
      Object {
        "id": "b93c0877-b9e1-40d4-8cdd-427246a6e3ef",
      },
      Object {
        "id": "2a944866-4e4d-4c20-9dac-e45fa1a71de0",
      },
    ],
  ],
}
`;

exports[`nested collection getter 2`] = `
Object {
  "args": Array [
    "transactions",
    CollectionMixins [
      TransactionModel {},
      TransactionModel {},
    ],
  ],
}
`;

exports[`nested collection getter 3`] = `
Object {
  "args": Array [
    "transactions",
    CollectionMixins [
      TransactionModel {},
      TransactionModel {},
    ],
  ],
}
`;

exports[`nested collection getter 4`] = `
Object {
  "args": Array [
    "instances",
    CollectionMixins [
      AdvisorModel {},
    ],
  ],
}
`;

exports[`nested collection getter 5`] = `
Object {
  "args": Array [
    "transactions",
    CollectionMixins [
      TransactionModel {},
      TransactionModel {},
    ],
  ],
}
`;

exports[`nested collection getter 6`] = `
Object {
  "args": Array [
    "transactions",
    CollectionMixins [
      TransactionModel {},
      TransactionModel {},
    ],
  ],
}
`;

exports[`nested collection getter from find 1`] = `
Object {
  "args": Array [
    "instances",
    CollectionMixins [
      AdvisorModel {},
    ],
  ],
}
`;

exports[`nested collection getter from find 2`] = `
Object {
  "args": Array [
    "transactions",
    CollectionMixins [
      TransactionModel {},
      TransactionModel {},
    ],
  ],
}
`;

exports[`nested collection getter from find 3`] = `
Object {
  "args": Array [
    "transactions",
    CollectionMixins [
      TransactionModel {},
      TransactionModel {},
    ],
  ],
}
`;

exports[`nested collection index access 1`] = `
Object {
  "args": Array [
    "transactions",
    TransactionModel {},
  ],
}
`;

exports[`nested collection index access 2`] = `
Object {
  "args": Array [
    "advisor_id",
    "PdOJWFBgNPUEMhX1JlsDm7zWy012",
  ],
}
`;

exports[`nested collection index access 3`] = `
Object {
  "args": Array [
    "user_id",
    "9KGhxtVGdPMD4VRIuZw25Iwo8x33",
  ],
}
`;

exports[`nested collection index access 4`] = `
Object {
  "args": Array [
    "session_id",
    "session_1",
  ],
}
`;

exports[`nested collection mutations 1`] = `
Object {
  "args": Array [
    "len",
    CollectionMixins [
      TransactionModel {},
      TransactionModel {},
      TransactionModel {},
      TransactionModel {},
      TransactionModel {},
      TransactionModel {},
      TransactionModel {},
      TransactionModel {},
      TransactionModel {},
      TransactionModel {},
      TransactionModel {},
      TransactionModel {},
      TransactionModel {},
      TransactionModel {},
      TransactionModel {},
    ],
    15,
  ],
}
`;

exports[`nested collection mutations 2`] = `
Object {
  "args": Array [
    "lastTran",
    "session_last",
  ],
}
`;

exports[`nested collection mutations 3`] = `
Object {
  "args": Array [
    "removedTrans.len",
    undefined,
  ],
}
`;
